--- a/artist-page.html
+++ b/artist-page.html
@@ -375,8 +375,7 @@
                         <div class="col-12 col-xl-5">
                           <h3 class="text-light">Brani che ti piacciono</h3>
                           <div id="favoriteArtistSongs"class="d-flex justify-content-start align-items-center mb-3">
-                           <!--<img src="./assets/imgs/main/image-11.jpg" class="rounded-circle me-2" width="60" height="60">
-                           <p class="text-light"><span class="text-light fw-bold">Hai messo Mi piace a 11 brani</span><br>di Imagine Dragons</p>-->
+                           
                           </div>    
                         </div> 
                         <a href="#" class="text-white-50 text-decoration-none d-none d-xl-flex" id="moreSongs">
@@ -389,7 +388,7 @@
                    <div class="container-fluid mt-4" id="discover-more">
                     <div class="row g-1">
                       <div class="col-12 d-flex justify-content-between">
-                        <h3 class="text-white">Altro di Artista</h3>
+                        <h3 class="text-white">Album di Artista</h3>
                         <a href="">
                           <p class="text-secondary fw-semibold">Vedi discografia</p>
                         </a>
