--- a/searchPage.html
+++ b/searchPage.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <div class="row">
         <!--navbar-->
-        <div class="col-12 col-md-3" id="container-navbar">
+        <div class="col-12 col-md-2" id="container-navbar">
           <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="container-fluid flex-column ps-md-0 bg-transparent">
               <div id="navbar" class="container-fluid flex-column bg-transparent ps-md-0">
@@ -156,8 +156,8 @@
             </div>
           </nav>
         </div>
-        <main class="col-12 col-md-7 mt-4 px-3">
-          <h1 class="text-light mb-4">Cerca</h1>
+        <main class="col-12 col-md-10 my-4 px-3 px-xl-5">
+          <h1 class="text-light my-4">Cerca</h1>
           <form>
             <div class="mb-4">
               <div class="d-flex align-items-center position-relative">
@@ -173,130 +173,148 @@
               </div>
             </div>
           </form>
-          <h2 id="section" class="text-light text-center mt-4 mb-3">Sfoglia tutto</h2>
-          <div id="container" class="container">
-            <div id="genre" class="row d-flex justify-content-center mt-3">
-              <div class="col-5 bg-warning h-100 mx-2 position-relative rounded-1">
+          <h2 id="section" class="text-light text-center text-xl-start mt-4 my-3">Sfoglia tutto</h2>
+          <div id="container" class="container-fluid px-0 mx-0 gx-0">
+            <div id="genre" class="d-flex flex-wrap justify-content-evenly justify-content-lg-between mt-3">
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
                 <h5 class="py-2 text-light">Podcast</h5>
                 <img src="assets/imgs/search/image-2.jpg" alt="" />
               </div>
-              <div class="col-5 bg-primary h-100 mx-2 position-relative rounded-1">
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
                 <h5 class="py-2 text-light">Create per te</h5>
                 <img src="assets/imgs/search/image-12.jpg" alt="" />
               </div>
-            </div>
-            <div id="genre" class="row d-flex justify-content-center mt-3">
-              <div class="col-5 bg-danger h-100 mx-2 position-relative rounded-1">
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
                 <h5 class="py-2 text-light">Podcast</h5>
                 <img src="assets/imgs/search/image-4.jpg" alt="" />
               </div>
-              <div class="col-5 bg-primary h-100 mx-2 position-relative rounded-1">
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-5.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-warning h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-2.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Create per te</h5>
+                <img src="assets/imgs/search/image-12.jpg" alt="" />
+              </div>
+
+              <div id="card" class="bg-danger h-100 position-relative rounded-1 my-1">
+                <h5 class="py-2 text-light">Podcast</h5>
+                <img src="assets/imgs/search/image-4.jpg" alt="" />
+              </div>
+              <div id="card" class="bg-primary h-100 position-relative rounded-1 my-1">
                 <h5 class="py-2 text-light">Create per te</h5>
                 <img src="assets/imgs/search/image-5.jpg" alt="" />
               </div>
             </div>
-            <div id="genre" class="row d-flex justify-content-center mt-3">
-              <div class="col-5 bg-success h-100 mx-2 position-relative rounded-1">
-                <h5 class="py-2 text-light">Podcast</h5>
-                <img src="assets/imgs/search/image-6.jpg" alt="" />
-              </div>
-              <div class="col-5 bg-secondary h-100 mx-2 position-relative rounded-1">
-                <h5 class="py-2 text-light">Create per te</h5>
-                <img src="assets/imgs/search/image-7.jpg" alt="" />
-              </div>
-            </div>
-            <div id="genre" class="row d-flex justify-content-center mt-3">
-              <div class="col-5 bg-info h-100 mx-2 position-relative rounded-1">
-                <h5 class="py-2 text-light">Podcast</h5>
-                <img src="assets/imgs/search/image-8.jpg" alt="" />
-              </div>
-              <div class="col-5 bg-primary h-100 mx-2 position-relative rounded-1">
-                <h5 class="py-2 text-light">Create per te</h5>
-                <img src="assets/imgs/search/image-9.jpg" alt="" />
-              </div>
-            </div>
           </div>
         </main>
-        <div id="friends" class="col-12 col-md-2 container-fluid p-0 bg-dark">
-          <div class="d-flex justify-content-between mt-2 ms-2">
-            <h5 class="text-light">Attività amici</h5>
-            <div class="d-flex flex-end">
-              <svg
-                class="me-1"
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-person-plus"
-                viewbox="0 0 16 16"
-              >
-                <path
-                  d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"
-                />
-                <path
-                  fill-rule="evenodd"
-                  d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"
-                />
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-x-lg"
-                viewbox="0 0 16 16"
-              >
-                <path
-                  d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="container text-light">
-            <div class="d-flex justify-content-between">
-              <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" /></div>
-              <div class="text-align-start">
-                <p class="mb-0">Charlie Hookham</p>
-                <p class="mb-0">all right - ajeje</p>
-                <p>
-                  <i class="bi bi-0-circle"></i>
-                  EP III
-                </p>
-              </div>
-              <div>
-                <p>4 ore</p>
-              </div>
-            </div>
-            <div class="d-flex justify-content-between">
-              <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" /></div>
-              <div class="text-align-start">
-                <p class="mb-0">Charlie Hookham</p>
-                <p class="mb-0">all right - ajeje</p>
-                <p>
-                  <i class="bi bi-0-circle"></i>
-                  EP III
-                </p>
-              </div>
-              <div>
-                <p>4 ore</p>
-              </div>
-            </div>
-            <div class="d-flex justify-content-between">
-              <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" /></div>
-              <div class="text-align-start">
-                <p class="mb-0">Charlie Hookham</p>
-                <p class="mb-0">all right - ajeje</p>
-                <p>
-                  <i class="bi bi-0-circle"></i>
-                  EP III
-                </p>
-              </div>
-              <div>
-                <p>4 ore</p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       <footer class="position-fixed bottom-0 w-100 border-top border-light" id="footer">
         <div id="player" class="row align-items-center bg-dark px-3 py-2 gx-0">
