--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container-fluid" >
         <div class="row">
-          <div class="d-none d-lg-block col-lg-3 bg-dark" id="container-navbar">
+          <div class="d-lg-block col-lg-3 bg-dark" id="container-navbar">
             <!--navbar-->
             <nav class="navbar navbar-expand-lg bg-body-dark">
               <div class="container-fluid  flex-column ps-md-0 bg-transparent">
