--- a/index.html
+++ b/index.html
@@ -579,22 +579,22 @@
                    </div>
                 </div>
                 <div id="friends" class="d-none d-lg-block col-2 container-fluid p-0 bg-dark">
-                  <div class="d-flex justify-content-between mt-2 ms-2">
+                  <div class="d-flex justify-content-between mt-3 mb-4 mx-2">
                     <h5 class="text-light">Attività amici</h5>
                     <div class="d-flex flex-end mt-1 me-1">
                       
-                      <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
+                      <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
                         <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                         <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
                       </svg>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
                       </svg>
                     </div>
                   </div>
                   <div class="container text-light">
                     <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" class="rounded-circle "></div>
                       <div class="text-align-start">
                         <p class="mb-0">Charlie Hookham</p>
                         <p class="mb-0">all right - ajeje</p>
@@ -605,7 +605,7 @@
                       </div>
                     </div>
                     <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" class="rounded-circle "></div>
                       <div class="text-align-start">
                         <p class="mb-0">Charlie Hookham</p>
                         <p class="mb-0">all right - ajeje</p>
@@ -616,7 +616,7 @@
                       </div>
                     </div>
                     <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" class="rounded-circle "></div>
                       <div class="text-align-start">
                         <p class="mb-0">Charlie Hookham</p>
                         <p class="mb-0">all right - ajeje</p>
