--- a/index.html
+++ b/index.html
@@ -317,16 +317,16 @@
           </div>
             <div class="col-12 col-lg-7 p-3" id="main-container">
                 <div class="d-none d-xl-flex justify-content-between align-items-center">
-                    <div id ="switch-icon" class="p-1">
-                        <button class="bg-dark border border-dark rounded-circle me-2"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-left" viewBox="0 0 16 16">
+                    <div id ="switch-icon" class="d-flex p-1">
+                        <button class="bg-dark border border-dark rounded-circle me-2 social"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-left" viewBox="0 0 16 16">
                             <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
                           </svg></button>
-                        <button class="bg-dark border border-dark rounded-circle"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-right" viewBox="0 0 16 16">
+                        <button class="bg-dark border border-dark rounded-circle social"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-right" viewBox="0 0 16 16">
                             <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                           </svg></button>
                     </div>
                     <div id="profile">
-                        <button class="bg-dark border border-dark rounded d-flex align-items-center"><svg class="img-fluid" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <button class="bg-dark border border-dark rounded d-flex align-items-center"><svg class="img-fluid" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                           </svg><span class="text-white ms-2">Username</span></button>
