--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container-fluid" >
         <div class="row">
-          <div class="d-lg-block col-lg-3 bg-dark" id="container-navbar">
+          <div class="col-lg-3 bg-dark" id="container-navbar">
             <!--navbar-->
             <nav class="navbar navbar-expand-lg bg-body-dark">
               <div class="container-fluid  flex-column ps-md-0 bg-transparent">
@@ -335,7 +335,7 @@
                 <div id="mainTrack" class="container-fluid d-none d-xl-block bg-dark p-3 border  border-dark rounded mt-5" id="container-new-album">
                     
                 </div>
-                <div class="container-fluid mt-5">
+                <div class="container-fluid mt-4 mt-xl-5">
                     <div class="d-flex flex-column">
                         <div class="d-flex justify-content-between">
                             <h3 class="col-6 col-md-12 text-white text-left">Buonasera</h3>
