--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     id="navbarNavDropdown"
                   >
                     <div class="container-fluid d-flex" id="mobile-navbar">
-                      <ul class="navbar-nav mt-3 flex-md-column" id="navbar-menu">
+                      <ul class="navbar-nav mt-3 flex-lg-column" id="navbar-menu">
                         <li class="nav-item d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
