--- a/index.html
+++ b/index.html
@@ -426,7 +426,27 @@
 
                    <div class="container-fluid mt-5">
                     <div class="row g-3">
-                        
+                      <div class="col-12 d-lg-none">
+                        <div class="card bg-dark p-2 container-carta" style="min-height:250px; max-height: 280px;">
+                          <div class="carta">
+                            <img src="assets/imgs/main/image-9.jpg" class="card-img-top "  height="150px" alt="...">
+                            <div class="d-lg-none d-md-flex text-start mt-3 ms-2">
+                              <svg id="heart-mobile" role="img" height="32" width="32"  aria-hidden="true" viewBox="0 0 24 24" data-encore-id="icon" class="Svg-sc-ytk21e-0 gQUQL">
+                                <path d="M8.667 1.912a6.257 6.257 0 0 0-7.462 7.677c.24.906.683 1.747 1.295 2.457l7.955 9.482a2.015 2.015 0 0 0 3.09 0l7.956-9.482a6.188 6.188 0 0 0 1.382-5.234l-.49.097.49-.099a6.303 6.303 0 0 0-5.162-4.98h-.002a6.24 6.24 0 0 0-5.295 1.65.623.623 0 0 1-.848 0 6.257 6.257 0 0 0-2.91-1.568z"></path></svg>
+                                <span class="text-white fs-1 ms-2">...</span>
+                              </div>
+                          </div>
+                          <div>
+                            <div class="card-body corpo-carta text-start ">
+                              <h5 class="card-title text-white fs-6">Hot Hits Italia</h5>
+                              <p class="card-text text-secondary">La playlist più calda del momento</p>
+                            </div>
+                            <div class="d-lg-none d-md-flex text-end  mt-4 me-1">
+                              <span class="text-secondary">16 brani</span><span class="ms-2 p-2 mobile-play-btn"><svg role="img" height="25" width="25" aria-hidden="true" viewBox="0 0 24 24" data-encore-id="icon" class="Svg-sc-ytk21e-0 gQUQL"><path d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z"></path></svg></span>
+                            </div>
+                          </div>
+                          </div>
+                    </div>
                         <!--fine row-->
                     </div>
                         <!--fine container-->
