--- a/searchPage.html
+++ b/searchPage.html
@@ -16,12 +16,12 @@
   </head>
   <body class="bg-dark">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row d-flex justify-content-center">
         <!--navbar-->
-        <div class="col-12 col-md-2" id="container-navbar">
+        <div class="col-12 col-lg-2" id="container-navbar">
           <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="container-fluid flex-column ps-md-0 bg-transparent">
-              <div id="navbar" class="container-fluid flex-column bg-transparent ps-md-0">
+            <div class="container-fluid ps-md-0 bg-transparent">
+              <div id="navbar" class="container-fluid bg-transparent ps-md-0">
                 <a class="navbar-brand" href="#" id="three-dots">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -37,7 +37,7 @@
                   </svg>
                 </a>
                 <button
-                  class="navbar-toggler d-none d-md-flex"
+                  class="navbar-toggler d-none d-lg-flex"
                   type="button"
                   data-bs-toggle="collapse"
                   data-bs-target="#navbarNavDropdown"
@@ -49,7 +49,7 @@
                 </button>
                 <div class="collapse navbar-collapse d-flex flex-column bg-transparent" id="navbarNavDropdown">
                   <div class="container-fluid d-flex" id="mobile-navbar">
-                    <ul class="navbar-nav mt-3 flex-md-column bg-transparent" id="navbar-menu">
+                    <ul class="navbar-nav mt-3 flex-lg-column bg-transparent" id="navbar-menu">
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
