--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 
                    <div class="container-fluid mt-5">
-                    <div class="row g-3">
+                    <div class="row gap-md-4 d-flex justify-content-center">
                       <!-- <div class="col-12 col-sm-6 d-lg-none d-flex p-2 bg-dark rounded-1">
                         <div class="">
                           <img src="assets/imgs/main/image-15.jpg" height="150px" class="rounded-1 me-1" alt="">
@@ -444,7 +444,7 @@
                       </div> -->
 
                       <!--prova2-->
-                      <div class="col-12  d-lg-none p-2 bg-dark rounded-1">
+                      <div class="col-12 col-md-5  d-lg-none p-2 bg-dark rounded-1">
                         <div class="d-flex">
                           <div id="img-container" class="me-2">
                           <img src="assets/imgs/main/image-15.jpg" alt="" height="150px" class="rounded-1">
@@ -469,7 +469,7 @@
                         </div>
                       </div>
 
-                      <div class="col-12  d-lg-none p-2 bg-dark rounded-1">
+                      <div class="col-12 col-md-5  d-lg-none p-2 bg-dark rounded-1">
                         <div class="d-flex">
                           <div id="img-container" class="me-2">
                           <img src="assets/imgs/main/image-16.jpg" alt="" height="150px" class="rounded-1">
@@ -494,7 +494,7 @@
                         </div>
                       </div>
 
-                      <div class="col-12  d-lg-none p-2 bg-dark rounded-1">
+                      <div class="col-12 col-md-5  d-lg-none p-2 bg-dark rounded-1">
                         <div class="d-flex">
                           <div id="img-container" class="me-2">
                           <img src="assets/imgs/main/image-5.jpg" alt="" height="150px" class="rounded-1">
@@ -519,7 +519,7 @@
                         </div>
                       </div>
 
-                      <div class="col-12  d-lg-none p-2 bg-dark rounded-1">
+                      <div class="col-12 col-md-5  d-lg-none p-2 bg-dark rounded-1">
                         <div class="d-flex">
                           <div id="img-container" class="me-2">
                           <img src="assets/imgs/main/image-8.jpg" alt="" height="150px" class="rounded-1">
