--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 
                    <div class="container-fluid mt-5">
-                    <div class="row gap-md-4 d-flex justify-content-center">
+                    <div class="row g-3 gap-md-4 d-flex justify-content-center">
                       <!-- <div class="col-12 col-sm-6 d-lg-none d-flex p-2 bg-dark rounded-1">
                         <div class="">
                           <img src="assets/imgs/main/image-15.jpg" height="150px" class="rounded-1 me-1" alt="">
