--- a/index.html
+++ b/index.html
@@ -711,37 +711,37 @@
                     </div>
                   </div>
                   <div class="container text-light">
-                    <div class="d-flex justify-content-between mb-2">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1" class="rounded-circle "></div>
+                    <div class="d-flex justify-content-start mb-2">
+                      <div class="me-2"><img width="50px" src="assets/imgs/search/image-18.jpg" alt="amico1" class="rounded-circle "></div>
                       <div class="text-align-start">
                         <p class="mb-0">Charlie Hookham</p>
                         <p class="mb-0 small">In camera + Yumi Zouma</p>
                         <p class="small"><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
-                      <div>
-                        <p>4 ore</p>
+                      <div class="flex-grow-1">
+                        <p class="text-end">4 ore</p>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between mb-2">
-                      <div><img width="50px" src="assets/imgs/search/image-20.jpg" alt="amico1" class="rounded-circle "></div>
+                    <div class="d-flex justify-content-start mb-2">
+                      <div class="me-2"><img width="50px" src="assets/imgs/search/image-20.jpg" alt="amico1" class="rounded-circle "></div>
                       <div class="text-align-start">
                         <p class="mb-0">lightdark02</p>
                         <p class="mb-0 small">Ciao sono gigi</p>
                         <p class="small"><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
-                      <div>
-                        <p>4 ore</p>
+                      <div class="flex-grow-1">
+                        <p class="text-end">4 ore</p>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-21.jpg" alt="amico1" class="rounded-circle "></div>
+                    <div class="d-flex justify-content-start">
+                      <div class="me-2"><img width="50px" src="assets/imgs/search/image-21.jpg" alt="amico1" class="rounded-circle "></div>
                       <div class="text-align-start">
                         <p class="mb-0">Valeria Traverso</p>
                         <p class="mb-0 small">New Kungs Sleeping Wolf</p>
                         <p class="small"><i class="bi bi-music-note-beamed"></i> Twerk Badass Mood</p>
                       </div>
-                      <div>
-                        <p>4 ore</p>
+                      <div class="flex-grow-1">
+                        <p class="text-end">4 ore</p>
                       </div>
                     </div>
                   </div>
