--- a/index.html
+++ b/index.html
@@ -727,10 +727,10 @@
                       <div class="text-align-start">
                         <p class="mb-0">lightdark02</p>
                         <p class="mb-0 small">Ciao sono gigi</p>
-                        <p class="small"><i class="bi bi-0-circle"></i> EP III</p>
+                        <p class="small"><i class="bi bi-2-circle me-1"></i>Gigietto</p>
                       </div>
                       <div class="flex-grow-1">
-                        <p class="text-end">4 ore</p>
+                        <p class="text-end">3 ore</p>
                       </div>
                     </div>
                     <div class="d-flex justify-content-start">
@@ -741,7 +741,7 @@
                         <p class="small"><i class="bi bi-music-note-beamed"></i> Twerk Badass Mood</p>
                       </div>
                       <div class="flex-grow-1">
-                        <p class="text-end">4 ore</p>
+                        <p class="text-end">7 ore</p>
                       </div>
                     </div>
                   </div>
