--- a/album-page.html
+++ b/album-page.html
@@ -31,8 +31,8 @@
                 <a class="navbar-brand" href="#" id="three-dots">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
+                    width="22"
+                    height="22"
                     fill="white"
                     class="bi bi-three-dots"
                     viewbox="0 0 16 16"
@@ -65,8 +65,8 @@
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
+                          width="22"
+                          height="22"
                           fill="white"
                           class="bi bi-house-door-fill"
                           viewbox="0 0 16 16"
@@ -100,8 +100,8 @@
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
+                          width="22"
+                          height="22"
                           fill="white"
                           class="bi bi-collection"
                           viewbox="0 0 16 16"
@@ -123,8 +123,8 @@
                     <li class="nav-item d-flex align-items-center">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
+                        width="22"
+                        height="22"
                         fill="white"
                         class="bi bi-plus-square"
                         viewbox="0 0 16 16"
@@ -146,8 +146,8 @@
                     <li class="nav-item d-flex align-items-center">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
+                        width="22"
+                        height="22"
                         fill="white"
                         class="bi bi-arrow-through-heart"
                         viewbox="0 0 16 16"
@@ -164,8 +164,8 @@
                     <li class="nav-item d-flex align-items-center">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
+                        width="22"
+                        height="22"
                         fill="white"
                         class="bi bi-bookmark-fill"
                         viewbox="0 0 16 16"
@@ -184,7 +184,7 @@
 
           <!--comments section-->
           <div
-            class="container-fluid border-light border-top border-opacity-25 overflow-auto"
+            class="container-fluid border-light border-top border-opacity-25 overflow-auto mt-1"
             style="max-height: 55vh"
             id="comments"
           >
@@ -195,7 +195,7 @@
               class="scrollspy-example"
               tabindex="0"
             >
-              <div id="friend-comment-1" class="d-flex text-light">
+              <div id="friend-comment-1" class="d-flex text-light mt-2">
                 <span class="list-item fw-bolder me-2">Pippo79</span>
                 <p>...</p>
               </div>
@@ -819,14 +819,14 @@
           </div>
         </div>
         <div id="friends" class="col-2 container-fluid p-0 bg-dark">
-          <div class="d-flex justify-content-between mt-2 ms-2">
-            <h5 class="text-light">Attività amici</h5>
-            <div class="d-flex flex-end">
+          <div class="d-flex justify-content-between my-2 ms-2">
+            <h5 class="text-light ms-2">Attività amici</h5>
+            <div class="d-flex flex-end mt-1 me-2">
               <svg
                 class="me-1"
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
+                width="20"
+                height="20"
                 fill="currentColor"
                 class="bi bi-person-plus"
                 viewbox="0 0 16 16"
@@ -841,8 +841,8 @@
               </svg>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
+                width="20"
+                height="20"
                 fill="currentColor"
                 class="bi bi-x-lg"
                 viewbox="0 0 16 16"
@@ -854,64 +854,67 @@
             </div>
           </div>
           <div class="container text-light">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-start mb-2">
               <div>
                 <img
                   width="50px"
-                  src="assets/imgs/search/image-19.jpg"
+                  src="assets/imgs/search/image-18.jpg"
                   alt="amico1"
+                  class="rounded-circle"
                 />
               </div>
-              <div class="text-align-start">
+              <div class="text-align-start ms-3">
                 <p class="mb-0">Charlie Hookham</p>
-                <p class="mb-0">all right - ajeje</p>
-                <p>
+                <p class="mb-0">In camera + Yumi Zouma</p>
+                <p class="small">
                   <i class="bi bi-0-circle"></i>
                   EP III
                 </p>
               </div>
-              <div>
-                <p>4 ore</p>
+              <div class="flex-grow-1">
+                <p class="text-end">6 ore</p>
               </div>
             </div>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-start mb-2">
               <div>
                 <img
                   width="50px"
                   src="assets/imgs/search/image-19.jpg"
                   alt="amico1"
+                  class="rounded-circle"
                 />
               </div>
-              <div class="text-align-start">
-                <p class="mb-0">Charlie Hookham</p>
-                <p class="mb-0">all right - ajeje</p>
-                <p>
-                  <i class="bi bi-0-circle"></i>
-                  EP III
+              <div class="text-align-start ms-3">
+                <p class="mb-0">lightdark02</p>
+                <p class="mb-0">Ciao sono gigi</p>
+                <p class="small">
+                  <i class="bi bi-2-circle"></i>
+                  Gigietto
                 </p>
               </div>
-              <div>
-                <p>4 ore</p>
+              <div class="flex-grow-1">
+                <p class="text-end">4 ore</p>
               </div>
             </div>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-start mb-2">
               <div>
                 <img
                   width="50px"
-                  src="assets/imgs/search/image-19.jpg"
+                  src="assets/imgs/search/image-21.jpg"
                   alt="amico1"
+                  class="rounded-circle"
                 />
               </div>
-              <div class="text-align-start">
-                <p class="mb-0">Charlie Hookham</p>
-                <p class="mb-0">all right - ajeje</p>
-                <p>
-                  <i class="bi bi-0-circle"></i>
-                  EP III
+              <div class="text-align-start ms-3">
+                <p class="mb-0">Valeria Traverso</p>
+                <p class="mb-0 small">New Kungs Sleeping Wolf</p>
+                <p class="small">
+                  <i class="bi bi-music-note-beamed"></i>
+                  Twerk Badass Mood
                 </p>
               </div>
-              <div>
-                <p>4 ore</p>
+              <div class="flex-grow-1">
+                <p class="text-end">2 ore</p>
               </div>
             </div>
           </div>
