--- a/artist-page.html
+++ b/artist-page.html
@@ -22,8 +22,8 @@
                   <a class="navbar-brand" href="#" id="three-dots">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
+                      width="22"
+                      height="22"
                       fill="white"
                       class="bi bi-three-dots"
                       viewBox="0 0 16 16"
@@ -53,8 +53,8 @@
                         <li class="nav-item d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
-                            width="16"
-                            height="16"
+                            width="22"
+                            height="22"
                             fill="white"
                             class="bi bi-house-door-fill"
                             viewBox="0 0 16 16"
@@ -73,8 +73,8 @@
                         <li class="nav-item d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
-                            width="16"
-                            height="16"
+                            width="22"
+                            height="22"
                             fill="white"
                             class="bi bi-search"
                             viewBox="0 0 16 16"
@@ -88,8 +88,8 @@
                         <li class="nav-item d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
-                            width="16"
-                            height="16"
+                            width="22"
+                            height="22"
                             fill="white"
                             class="bi bi-collection"
                             viewBox="0 0 16 16"
@@ -111,8 +111,8 @@
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
+                          width="22"
+                          height="22"
                           fill="white"
                           class="bi bi-plus-square"
                           viewBox="0 0 16 16"
@@ -134,8 +134,8 @@
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
+                          width="22"
+                          height="22"
                           fill="white"
                           class="bi bi-arrow-through-heart"
                           viewBox="0 0 16 16"
@@ -152,8 +152,8 @@
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
+                          width="22"
+                          height="22"
                           fill="white"
                           class="bi bi-bookmark-fill"
                           viewBox="0 0 16 16"
@@ -172,7 +172,7 @@
     
             <!--comments section-->
             <div
-              class="container-fluid border-light border-top border-opacity-25 overflow-auto"
+              class="container-fluid border-light border-top border-opacity-25 overflow-auto mt-1"
               style="max-height: 55vh"
               id="comments"
             >
@@ -183,7 +183,7 @@
                 class="scrollspy-example"
                 tabindex="0"
               >
-                <div id="friend-comment-1" class="d-flex text-light">
+                <div id="friend-comment-1" class="d-flex text-light mt-2">
                   <span class="list-item fw-bolder me-2">Pippo79</span>
                   <p>...</p>
                 </div>
@@ -319,11 +319,11 @@
             <div class="col-12 col-xl-7" id="main-container">
               <div id="artistPage" class="row row-gap-5">
                 <div class="d-flex justify-content-between align-items-center mb-5 px-3">
-                    <div id ="switch-icon" class="p-1">
-                        <button class="bg-dark border border-dark rounded-circle me-2"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-left" viewBox="0 0 16 16">
+                    <div id ="switch-icon" class="d-flex p-1">
+                        <button class="bg-dark border border-dark rounded-circle me-2 social"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-left" viewBox="0 0 16 16">
                             <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
                           </svg></button>
-                        <button class="bg-dark border border-dark rounded-circle"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-right" viewBox="0 0 16 16">
+                        <button class="bg-dark border border-dark rounded-circle social"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-right" viewBox="0 0 16 16">
                             <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                           </svg></button>
                     </div>
@@ -349,8 +349,8 @@
                           <a href="#">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
-                              width="16"
-                              height="16"
+                              width="20"
+                              height="20"
                               fill="white"
                               class="bi bi-three-dots"
                               viewBox="0 0 16 16"
@@ -438,51 +438,51 @@
                    </div>
                 </div>
                 <div id="friends" class="col-2 container-fluid p-0 bg-dark">
-                  <div class="d-flex justify-content-between mt-2 ms-2">
-                    <h5 class="text-light">Attività amici</h5>
-                    <div class="d-flex flex-end me-2 mt-1">
+                  <div class="d-flex justify-content-between mt-3 mb-4 mx-2">
+                    <h5 class="text-light ms-2">Attività amici</h5>
+                    <div class="d-flex flex-end me-1 mt-1">
                       
-                      <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
+                      <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
                         <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                         <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
                       </svg>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
                       </svg>
                     </div>
                   </div>
                   <div class="container text-light">
-                    <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                    <div class="d-flex justify-content-start">
+                      <div class="me-3"><img width="50px" src="assets/imgs/search/image-18.jpg" class="rounded-circle" alt="amico1"></div>
                       <div class="text-align-start">
                         <p class="mb-0">Charlie Hookham</p>
-                        <p class="mb-0">all right - ajeje</p>
-                        <p><i class="bi bi-0-circle"></i> EP III</p>
+                        <p class="mb-0 small">In camera + Yumi Zouma</p>
+                        <p class="small"><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
-                      <div>
-                        <p>4 ore</p>
+                      <div class="flex-grow-1">
+                        <p class="text-end">7 ore</p>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                    <div class="d-flex justify-content-start">
+                      <div class="me-3"><img width="50px" src="assets/imgs/search/image-20.jpg" alt="amico1" class="rounded"></div>
                       <div class="text-align-start">
-                        <p class="mb-0">Charlie Hookham</p>
-                        <p class="mb-0">all right - ajeje</p>
-                        <p><i class="bi bi-0-circle"></i> EP III</p>
+                        <p class="mb-0">lightdark02</p>
+                        <p class="mb-0 small">Ciao sono gigi</p>
+                        <p class="small"><i class="bi bi-2-circle "></i> Gigietto</p>
                       </div>
-                      <div>
-                        <p>4 ore</p>
+                      <div class="flex-grow-1">
+                        <p class="text-end">6 ore</p>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between">
-                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                    <div class="d-flex justify-content-start">
+                      <div class="me-3"><img width="50px" src="assets/imgs/search/image-21.jpg" alt="amico1" class="rounded-circle"></div>
                       <div class="text-align-start">
-                        <p class="mb-0">Charlie Hookham</p>
-                        <p class="mb-0">all right - ajeje</p>
-                        <p><i class="bi bi-0-circle"></i> EP III</p>
+                        <p class="mb-0">Valeria Traverso</p>
+                        <p class="mb-0 small">New Kungs Sleeping Wold</p>
+                        <p class="small"><i class="bi bi-music-note-beamed me-1"></i>Twerk Badass Mood</p>
                       </div>
-                      <div>
-                        <p>4 ore</p>
+                      <div class="flex-grow-1">
+                        <p class="text-end">4 ore</p>
                       </div>
                     </div>
                   </div>
