--- a/searchPage.html
+++ b/searchPage.html
@@ -322,11 +322,11 @@
           </div>
         </main>
       </div>
-      <footer class="position-fixed bottom-0 w-100 border-top border-light" id="footer">
-        <div id="player" class="row align-items-center bg-dark px-3 py-2 gx-0">
+      <footer class="position-fixed bottom-0 start-0 w-100 border-top border-light" id="footer">
+        <div id="player" class="row align-items-center px-3 py-2 gx-0">
           <div
             id="containerLeft"
-            class="col-10 col-md-4 d-flex flex-row align-items-center justify-content-between justify-content-md-start"
+            class="col-10 col-lg-4 d-flex flex-row align-items-center justify-content-between justify-content-lg-start flex-grow-1 flex-grow-lg-0"
           >
             <div class="d-flex align-items-center">
               <div>
@@ -338,7 +338,7 @@
               </div>
             </div>
             <div
-              class="text-light flex-grow-1 d-flex flex-md-grow-0 justify-content-end justify-content-md-center"
+              class="text-light flex-grow-1 d-flex flex-lg-grow-0 justify-content-end justify-content-lg-center"
               id="heart-svg"
             >
               <button class="ms-3 me-1 btn bg-transparent text-light fs-3 svg">
@@ -371,7 +371,7 @@
 
           <div
             id="containerMiddle"
-            class="col-1 col-md-4 text-light d-flex flex-column align-items-end align-items-md-center gap-md-2"
+            class="col-1 col-lg-4 text-light d-flex flex-column align-items-end align-items-lg-center gap-lg-2"
           >
             <div id="playerControls" class="d-flex justify-content-center gap-2">
               <button id="shuffle" class="btn bg-transparent text-light">
@@ -467,8 +467,8 @@
             </div>
           </div>
 
-          <div id="containerRight" class="col-1 col-md-4 d-flex justify-content-end">
-            <button class="btn bg-transparent text-light d-none d-md-inline-block" id="mic">
+          <div id="containerRight" class="col-1 col-lg-4 d-flex justify-content-end">
+            <button class="btn bg-transparent text-light d-none d-lg-inline-block" id="mic">
               <svg
                 role="img"
                 height="16"
@@ -483,7 +483,7 @@
                 ></path>
               </svg>
             </button>
-            <button class="btn bg-transparent text-light d-none d-md-inline-block" id="ddg">
+            <button class="btn bg-transparent text-light d-none d-lg-inline-block" id="ddg">
               <svg
                 role="img"
                 height="16"
@@ -515,7 +515,7 @@
               </svg>
             </button>
             <div id="volume" class="d-flex justify-content-center align-items-center me-0">
-              <button class="btn bg-transparent text-light d-none d-md-inline-block" id="volume-icon">
+              <button class="btn bg-transparent text-light d-none d-lg-inline-block" id="volume-icon">
                 <svg
                   role="presentation"
                   height="16"
