--- a/album-page.html
+++ b/album-page.html
@@ -17,11 +17,11 @@
   <body class="bg-dark">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 col-md-3" id="container-navbar">
+        <div class="col-12 col-lg-3" id="container-navbar">
           <!--navbar-->
           <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="container-fluid flex-column ps-md-0 bg-transparent">
-              <div id="navbar" class="container-fluid flex-column bg-transparent ps-md-0">
+            <div class="container-fluid flex-column ps-lg-0 bg-transparent">
+              <div id="navbar" class="container-fluid flex-column bg-transparent ps-lg-0">
                 <a class="navbar-brand" href="#" id="three-dots">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -39,7 +39,7 @@
 
                 <div class="collapse navbar-collapse d-flex flex-column bg-transparent" id="navbarNavDropdown">
                   <div class="container-fluid d-flex" id="mobile-navbar">
-                    <ul class="navbar-nav mt-3 flex-md-column bg-transparent" id="navbar-menu">
+                    <ul class="navbar-nav mt-3 flex-lg-column bg-transparent" id="navbar-menu">
                       <li class="nav-item d-flex align-items-center">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -290,7 +290,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-7 p-3 mb-5" id="main-container">
+        <div class="col-12 col-lg-7 p-3 mb-5" id="main-container">
           <div class="d-flex justify-content-between align-items-center">
             <div id="switch-icon" class="p-1 d-flex">
               <button class="bg-dark border border-dark rounded-circle me-2 social">
